fixed a navbar logo issue on mobile

--- a/YongeKleenTech-CarWash/css/responsive.css
+++ b/YongeKleenTech-CarWash/css/responsive.css
@@ -462,7 +462,8 @@ and (orientation: portrait) {
     .navbar-brand {
         margin-top: 0;
         margin-left: 0;
-        padding: 0 15px;
+        padding-left: 0;
+        /*padding: 0 15px;*/
     }
     .navbar-company-name {
         display: none;
@@ -653,13 +654,12 @@ and (orientation: landscape) {
     .navbar-brand {
         margin-top: 0;
         margin-left: 0;
-        /*padding: 0 15px;*/
+        padding-left: 0;
     }
-
     .navbar-company-name {
         display: none;
     }
-    /* ========== navbar ========== */
+    /* ========== End navbar ========== */
 
 
     /* ========== 2: header ========== */
